codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__large.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
<<<<<<< HEAD
"▌ [Pasted Content 1005 chars]                                                                       "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"                                                                                                    "
"⏎ send   ⌃J newline   ⌃T transcript   ⌃C quit                                                       "
=======
"                                                                                                    "
"› [Pasted Content 1005 chars]                                                                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
>>>>>>> upstream/main
